<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AlbumDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:contentDescription="@string/album_cover_photo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:shadowColor="@color/black"
            android:shadowRadius="20"
            android:text="@string/album_title_placeholder"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/albumDetailBackButton"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_arrow_bg"
            android:contentDescription="@string/album_detail_back"
            android:src="@drawable/arrow_back"
            android:radius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/albumDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="30dp"
        android:text="@string/description_placeholder"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/albumYear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/year_placeholder" />

        <TextView
            android:id="@+id/albumGenre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/album_genre_placeholder" />

        <TextView
            android:id="@+id/albumLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/album_label_placeholder" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentAlbumContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="4dp"
        android:paddingHorizontal="9dp">

        <TextView
            android:id="@+id/commentAlbumButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comenta este álbum"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:paddingStart="14dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/starRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:paddingTop="4dp"
            android:numStars="5"
            android:rating="0"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:stepSize="1" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />
</LinearLayout>
