<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.PerformerDetailActivity">

    <!-- Usar ConstraintLayout para la parte superior -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/performerImageDetail"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:contentDescription="@string/performer_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/performerNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:shadowColor="@color/black"
            android:shadowRadius="20"
            android:text="@string/performer_title_placeholder"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/performerDetailBackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_arrow_bg"
            android:contentDescription="@string/performer_detail_back"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Descripción del Performer -->
    <TextView
        android:id="@+id/performerDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="30dp"
        android:text="@string/description_placeholder"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Sección de fechas, mantiene la alineación original -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/performerFecNaci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fec_nac_placeholder"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/performerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/performer_dia_placeholder"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/performerMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/performer_mes_placeholder"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/performerYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/performer_year_placeholder" />
    </LinearLayout>
</LinearLayout>
